@@ -661,7 +661,7 @@ test_run_subst_SOURCES = test/run-subst.c \
 	src/fifo-buffer.c src/buffered-io.c \
 	src/fd-util.c \
 	$(POOL_SRC)
-test_run_subst_LDADD = $(LIBCM4ALL_DAEMON_LIBS)
+test_run_subst_LDADD = $(LIBCM4ALL_DAEMON_LIBS) $(LIBEVENT_LIBS)
 
 test_run_cookie_client_SOURCES = test/run-cookie-client.c \
 	src/cookie-client.c src/http-string.c \
